k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: robinhood-clone
  labels:
    name: robinhood-clone
    app: stock-trading-app
